pagina personal version 2

--- a/index.html
+++ b/index.html
@@ -80,7 +80,14 @@
     </div>
 
     <div class="consulta">
-        <h2 id="Consulta-Anticorrupcion">Opinión sobre la consulta anticorrupción:</h2>
+        <h2 id="Consulta-Anticorrupcion">La consulta anticorrupción:</h2>
+        <p>Mi opinion de la consulta se basa de como fue la forma de que se aprobo y sus requerimientos para poder hacer
+           cumplir las peteciones del pueblo.
+        </p>
+        <video controls preload>
+            <source src="C:\Users\usuario\Desktop\Universidad\Semestre 7\WWW\Pagina Personal\Consulta.mp4" type="video/mp4">
+        </video>
+        
     </div>
     </div>
 
